--- a/mediakit.html
+++ b/mediakit.html
@@ -36,41 +36,52 @@
             <div class="col-md-4 media-container bg-dark transparent">
               <img src='img/kit/Logo_White.svg' alt=''>
               <a href='img/kit/Logo_White.svg'>
-              <p class="text-muted">Download as SVG</p>
-            </a>
+                <p class="text-muted">Download as SVG</p>
+              </a>
             </div>
             <div class="col-md-4 media-container bg-light transparent">
               <img src='img/kit/Logo_Black.png' alt=''>
               <a href='img/kit/Logo_Black.png'>
-              <p class="text-muted">Download as PNG</p>
-            </a>
+                <p class="text-muted">Download as PNG</p>
+              </a>
             </div>
             <div class="col-md-4 media-container bg-dark transparent">
               <img src='img/kit/Logo_White.png' alt=''>
               <a href='img/kit/Logo_White.png'>
-              <p class="text-muted">Download as PNG</p>
-            </a>
+                <p class="text-muted">Download as PNG</p>
+              </a>
             </div>
           </div>
           <hr>
           <div class="media-container">
-              <h3 class="text-center mt-5 mb-5" style="color:white;">D.Tube Icon</h3>
+            <h3 class="text-center mt-5 mb-5" style="color:white;">D.Tube Icon</h3>
             <div class="row text-center">
-                <div class="col-md-3 media-container bg-light transparent mx-auto">
-                    <img src='img/kit/Logo_Black_D.svg' alt=''>
-                    <a href='img/kit/Logo_Black_D.svg'>
-                    <p class="text-muted">Download as SVG</p>
-                  </a>
-                  </div>
-                  <div class="col-md-3 media-container mx-auto">
-                      <p style="margin-bottom:0;margin-top:1rem;" class="text-muted">Examples</p>
-                      <img src='img/kit/examples.png' alt=''>
-                    </div>
-              <div class="col-md-3 media-container bg-dark transparent mx-auto">
+              <div class="col-md-2 media-container bg-light transparent mx-auto">
+                <img src='img/kit/Logo_Black_D.svg' alt=''>
+                <a href='img/kit/Logo_Black_D.svg'>
+                  <p class="text-muted">Download as SVG</p>
+                </a>
+              </div>
+              <div class="col-md-2 media-container bg-dark transparent mx-auto">
                 <img src='img/kit/Logo_White_D.svg' alt=''>
                 <a href='img/kit/Logo_White_D.svg'>
-                <p class="text-muted">Download as SVG</p>
-              </a>
+                  <p class="text-muted">Download as SVG</p>
+                </a>
+              </div>
+              <div class="col-md-3 media-container mx-auto">
+                <img src='img/kit/DTubeIdea.png' alt=''>
+              </div>
+              <div class="col-md-2 media-container bg-light transparent mx-auto">
+                <img src='img/kit/Logo_Black_D.png' alt=''>
+                <a href='img/kit/Logo_Black_D.png'>
+                  <p class="text-muted">Download as PNG</p>
+                </a>
+              </div>
+              <div class="col-md-2 media-container bg-dark transparent mx-auto">
+                <img src='img/kit/Logo_White_D.png' alt=''>
+                <a href='img/kit/Logo_White_D.png'>
+                  <p class="text-muted">Download as PNG</p>
+                </a>
               </div>
             </div>
           </div>
@@ -78,7 +89,7 @@
 
       </div>
       <div class="container">
-          <h3 class="text-center mt-5 mb-5" style="color:white;">D.Tube colors</h3>
+        <h3 class="text-center mt-5 mb-5" style="color:white;">D.Tube colors</h3>
         <div class="row text-center">
           <div class="col-md-3 col-sm-6 color-container red">
             <h6 style="text-align: center;">Red</h6>
