--- a/mediakit.html
+++ b/mediakit.html
@@ -21,7 +21,7 @@
           <div class="row">
             <div class="col-lg-12 text-center">
               <h2 class="section-heading text-uppercase" style="color:white;">DTube logo</h2>
-              <h3 class="section-subheading text-muted">Please do not edit or change the DTube logo.
+              <h3 class="section-subheading text-muted">We advise you to not edit or change the DTube logo.
               </h3>
             </div>
           </div>
