--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
   <meta name="description" content="About DTube">
   <meta name="author" content="@dtube">
+  <link rel="icon"  href="img/dtubefavicon.png" />
   <title>About DTube</title>
 
   <!-- Bootstrap core -->
