--- a/mediakit.html
+++ b/mediakit.html
@@ -6,6 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
   <meta name="description" content="Media Kit DTube">
   <meta name="author" content="@dtube">
+  <link rel="icon"  href="img/dtubefavicon.png" />
   <title>Media Kit DTube</title>
   <!-- Bootstrap core -->
   <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
