--- a/index.html
+++ b/index.html
@@ -78,7 +78,6 @@
 
   <!-- About -->
   <section id="about" class="bg-light">
-      <iframe src="https://discordapp.com/widget?id=347020217966395393&theme=dark" width="350" height="500" allowtransparency="true" frameborder="0"></iframe>
     <div class="container">
       <div class="row">
         <div class="col-lg-12 text-center">
@@ -404,6 +403,8 @@
                 </a>
               </div>
             </div>
+            <iframe src="https://discordapp.com/widget?id=347020217966395393&theme=dark" width="100%" height="300" allowtransparency="true" frameborder="0"></iframe>
+            
           </div>
         </div>
       </div>
