--- a/mediakit.html
+++ b/mediakit.html
@@ -22,7 +22,7 @@
           <div class="row">
             <div class="col-lg-12 text-center">
               <h2 class="section-heading text-uppercase" style="color:white;">DTube logo</h2>
-              <h3 class="section-subheading text-muted">We advise you to not edit or change the DTube logo.
+              <h3 class="section-subheading text-muted">We advise you not to edit nor change the DTube logo.
               </h3>
             </div>
           </div>
@@ -57,31 +57,31 @@
           <div class="media-container">
             <h3 class="text-center mt-5 mb-5" style="color:white;">D.Tube Icon</h3>
             <div class="row text-center">
-              <div class="col-md-2 media-container bg-light transparent mx-auto">
+              <div class="col-md-2 small-container bg-light transparent mx-auto">
                 <img src='img/kit/Logo_Black_D.svg' alt=''>
                 <a href='img/kit/Logo_Black_D.svg'>
-                  <p class="text-muted">Download as SVG</p>
+                  <span>Download as SVG</span>
                 </a>
               </div>
-              <div class="col-md-2 media-container bg-dark transparent mx-auto">
+              <div class="col-md-2 small-container bg-dark transparent mx-auto">
                 <img src='img/kit/Logo_White_D.svg' alt=''>
                 <a href='img/kit/Logo_White_D.svg'>
-                  <p class="text-muted">Download as SVG</p>
+                  <span style="color:white">Download as SVG</span>
                 </a>
               </div>
-              <div class="col-md-3 media-container mx-auto">
-                <img src='img/kit/DTubeIdea.png' alt=''>
+              <div class="col-md-3 small-container mx-auto">
+                <img style="margin-top: -25px;margin-bottom: -25px;" src='img/kit/DTubeIdea.png' alt=''>
               </div>
-              <div class="col-md-2 media-container bg-light transparent mx-auto">
+              <div class="col-md-2 small-container bg-light transparent mx-auto">
                 <img src='img/kit/Logo_Black_D.png' alt=''>
                 <a href='img/kit/Logo_Black_D.png'>
-                  <p class="text-muted">Download as PNG</p>
+                  <span>Download as PNG</span>
                 </a>
               </div>
-              <div class="col-md-2 media-container bg-dark transparent mx-auto">
+              <div class="col-md-2 small-container bg-dark transparent mx-auto">
                 <img src='img/kit/Logo_White_D.png' alt=''>
                 <a href='img/kit/Logo_White_D.png'>
-                  <p class="text-muted">Download as PNG</p>
+                  <span style="color:white">Download as PNG</span>
                 </a>
               </div>
             </div>
@@ -90,6 +90,8 @@
 
       </div>
       <div class="container">
+        <hr>
+        <hr>
         <h3 class="text-center mt-5 mb-5" style="color:white;">D.Tube colors</h3>
         <div class="row text-center">
           <div class="col-md-3 col-sm-6 color-container red">
