--- a/index.html
+++ b/index.html
@@ -403,7 +403,6 @@
                 </a>
               </div>
             </div>
-            <iframe src="https://discordapp.com/widget?id=347020217966395393&theme=dark" width="100%" height="300" allowtransparency="true" frameborder="0"></iframe> 
           </div>
         </div>
       </div>
@@ -412,8 +411,13 @@
   <!-- Footer -->
   <footer>
     <div class="container">
-        <div class="col mt-5 mt-md-0">
-            <div id="steemit-widgets-ticker"></div>
+        <div class="row text-center">
+            <div class="col-4  mx-auto">
+                <iframe src="https://discordapp.com/widget?id=347020217966395393&theme=dark" width="100%" height="350" allowtransparency="true" frameborder="0"></iframe>                             
+            </div>
+            <div class="col-4 mt-4 mt-sm-0 mx-auto">
+                <div id="steemit-widgets-ticker"></div>
+            </div>
           </div>
   </footer>
   <div>
