--- a/index.html
+++ b/index.html
@@ -412,8 +412,8 @@
   <footer>
     <div class="container">
         <div class="row text-center">
-            <div class="col-4  mx-auto">
-                <iframe src="https://discordapp.com/widget?id=347020217966395393&theme=dark" width="100%" height="350" allowtransparency="true" frameborder="0"></iframe>                             
+            <div class="col-8  mx-auto">
+                <iframe src="https://widgetbot.io/embed/347020217966395393/347020218796736512/1111/" width="100%" height="250" allowtransparency="true" frameborder="0"></iframe>                             
             </div>
             <div class="col-4 mt-4 mt-sm-0 mx-auto">
                 <div id="steemit-widgets-ticker"></div>
