--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
       <div class="row">
         <div class="col-lg-12 text-center">
           <h2 class="section-heading text-uppercase">What is DTube ?</h2>
-          <h3 class="section-subheading text-muted">D.Tube is the biggest decentralized video platform, built on top of the STEEM Blockchain 
+          <h3 class="section-subheading text-muted">D.Tube is the first crypto-decentralized video platform, built on top of the STEEM Blockchain 
             and the IPFS peer-to-peer network.
           </h3>
         </div>
@@ -104,18 +104,17 @@
             <i class="fa fa-low-vision fa-stack-1x fa-inverse"></i>
           </span>
           <h4 class="service-heading">Resistant to censorship</h4>
-          <p class="text-muted">Because of the decentralized nature of IPFS and STEEM, D.Tube is not able to censor videos, nor enforce guidelines.
-            <strong>Only the users</strong> can, through the power of their votes and downvotes. </p>
+          <p class="text-muted">Because of the decentralized nature of IPFS and the STEEM blockchain, D.Tube is not able to censor videos, nor enforce guidelines.
+            <strong>Only the users</strong> can put a censorship, through the power of their upvotes and downvotes. </p>
         </div>
         <div class="col-md-3">
           <span class="fa-stack fa-4x">
             <i class="fa fa-circle fa-stack-2x text-primary"></i>
             <i class="fa fa-unlock fa-stack-1x fa-inverse"></i>
           </span>
-          <h4 class="service-heading">Totaly Decentralized</h4>
-          <p class="text-muted">Unlike other platforms, D.Tube is
-            <strong>totaly decentralized</strong>. This allow interactivity between users and creators without the need of middlemen.
-            We also respect your privacy and don't collect any personal data. </p>
+          <h4 class="service-heading">Right to privacy</h4>
+          <p class="text-muted">Are you concerned about protecting your data? We also think <strong>right to privacy</strong> should not to be forfeited. We are committed to protecting and respecting your right to privacy.
+            That's why D.Tube don't collect <strong>any personal data</strong>. </p>
         </div>
         <div class="col-md-3">
           <span class="fa-stack fa-4x">
@@ -123,8 +122,7 @@
             <i class="fa fa-smile-o fa-stack-1x fa-inverse"></i>
           </span>
           <h4 class="service-heading">Ads free</h4>
-          <p class="text-muted">D.Tube is serverless and has no running costs. Therefore,
-            <strong>we don't need ads</strong>. Users are free to advertise any product or service they would like, directly inside
+          <p class="text-muted">To deliver the best user experience D.Tube run <strong>without advertising</strong>. Users remain free to advertise any product or service they would like, directly inside
             their own videos, at their own risk of losing their subscribers.</p>
         </div>
       </div>
@@ -283,7 +281,7 @@
       <div class="col-lg-8 mx-auto text-center">
         <h1 class="text-center mt-5 mb-5">Contributing</h1>
         <h3 class="section-subheading text-muted">D.Tube is constantly being developed by our team and enhanced by all the community. 
-          You can play your part in it. Concretely, you can help us for :</h3>
+          You can play your part in it. Basically, you can help us for :</h3>
       </div>
       <div class="row text-center">
         <div class="col-4  mx-auto">
