--- a/mediakit.html
+++ b/mediakit.html
@@ -97,18 +97,22 @@
           <div class="col-md-3 col-sm-6 color-container red">
             <h6 style="text-align: center;">Red</h6>
             <div style="text-align: center;">#ff0000</div>
+            <div style="text-align: center;">0.0 1.0 1.0 0.0</div>
           </div>
           <div class="col-md-3 col-sm-6 color-container white">
             <h6 style="text-align: center;">White</h6>
             <div style="text-align: center;">#ffffff</div>
+            <div style="text-align: center;">0.0 0.0 0.0 0.0</div>
           </div>
           <div class="col-md-3 col-sm-6 color-container almostblack">
             <h6 style="text-align: center;">Almost Black</h6>
             <div style="text-align: center;">#212121</div>
+            <div style="text-align: center;">0.0 0.0 0.0 0.8510</div>
           </div>
           <div class="col-md-3 col-sm-6 color-container almostwhite">
             <h6 style="text-align: center;">Almost White</h6>
             <div style="text-align: center;">#fafafa</div>
+            <div style="text-align: center;">0.0 0.0 0.0 0.0196</div>
           </div>
         </div>
       </div>
