--- a/index.html
+++ b/index.html
@@ -110,11 +110,11 @@
         <div class="col-md-3">
           <span class="fa-stack fa-4x">
             <i class="fa fa-circle fa-stack-2x text-primary"></i>
-            <i class="fa fa-unlock fa-stack-1x fa-inverse"></i>
+            <i class="fa fa-balance-scale fa-stack-1x fa-inverse"></i>
           </span>
-          <h4 class="service-heading">Right to privacy</h4>
-          <p class="text-muted">Are you concerned about protecting your data? We also think <strong>right to privacy</strong> should not to be forfeited. We are committed to protecting and respecting your right to privacy.
-            That's why D.Tube don't collect <strong>any personal data</strong>. </p>
+          <h4 class="service-heading">A fair platform</h4>
+          <p class="text-muted">On DTube, there are <strong>no hidden algorithms</strong> controlling the visibility or monetization of certain videos over others.
+            All of DTube's data is public, and can be analyzed by anyone with an internet connection. </p>
         </div>
         <div class="col-md-3">
           <span class="fa-stack fa-4x">
@@ -122,7 +122,7 @@
             <i class="fa fa-smile-o fa-stack-1x fa-inverse"></i>
           </span>
           <h4 class="service-heading">Ads free</h4>
-          <p class="text-muted">To deliver the best user experience D.Tube run <strong>without advertising</strong>. Users remain free to advertise any product or service they would like, directly inside
+          <p class="text-muted">To deliver the best user experience D.Tube runs <strong>without advertising</strong>. Users remain free to advertise any product or service they would like, directly inside
             their own videos, at their own risk of losing their subscribers.</p>
         </div>
       </div>
@@ -317,7 +317,7 @@
       <div class="row text-center">
         <div class="col-12 col-sm-12">
             <a href="/mediakit.html" target="_blank">
-          <h4 class="text-muted">Download from Github</h4></a>
+          <h4 class="text-muted">Go to download page</h4></a>
         </div>
       </div>
     </div>
