--- a/index.html
+++ b/index.html
@@ -254,7 +254,7 @@
             <a href="https://steemit.com/@nannal">
               <h5>@nannal</h5>
             </a>
-            <p class="text-muted">IPFS Provider</p>
+            <p class="text-muted">Server Admin</p>
           </div>
         </div>
         <div class="col-sm-2">
