--- a/index.html
+++ b/index.html
@@ -337,9 +337,9 @@
           <div class="row eight-cols">
             <div class="col-sm-3">
               <div class="team-member">
-                <a href="https://discord.gg/krwbAaU">
+                <a href="https://discord.gg/dtube">
                   <h4 style="color:white">Discord</h4>
-                  <h6 style="color:white">discord.gg/krwbAaU</h6>
+                  <h6 style="color:white">discord.gg/dtube</h6>
                 </a>
               </div>
             </div>
