--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
           </span>
           <h4 class="service-heading">Resistant to censorship</h4>
           <p class="text-muted">Because of the decentralized nature of IPFS and the STEEM blockchain, D.Tube is not able to censor videos, nor enforce guidelines.
-            <strong>Only the users</strong> can put a censorship, through the power of their upvotes and downvotes. </p>
+            <strong>Only the users</strong> can censor it, through the power of their upvotes and downvotes. </p>
         </div>
         <div class="col-md-3">
           <span class="fa-stack fa-4x">
