--- a/index.html
+++ b/index.html
@@ -206,11 +206,11 @@
     <div class="container">
       <div class="row">
         <div class="col-lg-12 text-center">
-          <h2 class="section-heading text-uppercase">Our Amazing Team</h2>
+          <h2 class="section-heading text-uppercase">Our Team</h2>
         </div>
       </div>
-      <div class="row eight-cols">
-        <div class="col-sm-2">
+      <div class="row" style='margin-top:2rem'>
+        <div class="col-sm-3">
           <div class="team-member">
               <img src="https://img.busy.org/@heimindanger?width=48&height=48"/>
             <a href="https://steemit.com/@heimindanger">
@@ -220,7 +220,7 @@
 
           </div>
         </div>
-        <div class="col-sm-2">
+        <div class="col-sm-3">
           <div class="team-member">
             <img src="https://img.busy.org/@superkoala?width=48&height=48"/>
             <a href="https://steemit.com/@superkoala">
@@ -229,16 +229,7 @@
             <p class="text-muted">Developer</p>
           </div>
         </div>
-        <div class="col-sm-2">
-          <div class="team-member">
-              <img src="https://img.busy.org/@mkt?width=48&height=48"/>
-            <a href="https://steemit.com/@mkt">
-              <h5>@mkt</h5>
-            </a>
-            <p class="text-muted">Developer</p>
-          </div>
-        </div>
-        <div class="col-sm-2">
+        <div class="col-sm-3">
           <div class="team-member">
               <img src="https://img.busy.org/@nannal?width=48&height=48"/>
             <a href="https://steemit.com/@nannal">
@@ -247,7 +238,7 @@
             <p class="text-muted">Server Admin</p>
           </div>
         </div>
-        <div class="col-sm-2">
+        <div class="col-sm-3">
           <div class="team-member">
               <img src="https://img.busy.org/@thekyle?width=48&height=48"/>
             <a href="https://steemit.com/@thekyle">
@@ -395,10 +386,10 @@
   <footer>
     <div class="container">
         <div class="row text-center">
-            <div class="col-8  mx-auto">
-                <iframe src="https://widgetbot.io/embed/347020217966395393/347020218796736512/1101/" width="100%" height="250" allowtransparency="true" frameborder="0"></iframe>                             
+            <div class="col-6  mx-auto">
+              <iframe src="http://natsulus.github.io/Discord-iFrame-Widget/index.html?title=D.Tube's Discord&serverID=347020217966395393&theme=dark&invite=true" scrolling="no" height="300px" width="100%" frameborder="0"></iframe>
             </div>
-            <div class="col-4 mt-4 mt-sm-0 mx-auto">
+            <div class="col-6 mt-4 mt-sm-0 mx-auto">
                 <div id="steemit-widgets-ticker"></div>
             </div>
           </div>
