add macron, fix discord widget

--- a/index.html
+++ b/index.html
@@ -240,11 +240,11 @@
         </div>
         <div class="col-sm-3">
           <div class="team-member">
-              <img src="https://img.busy.org/@thekyle?width=48&height=48"/>
-            <a href="https://steemit.com/@thekyle">
-              <h5>@thekyle</h5>
+              <img  width="64" src="https://media.discordapp.net/attachments/363032668452945922/507299155744522260/Picture_Gregoire_D1.jpg"/>
+            <a href="https://steemit.com/@macron">
+              <h5>@macron</h5>
             </a>
-            <p class="text-muted">Search Provider</p>
+            <p class="text-muted">BizDev</p>
           </div>
         </div>
       </div>
@@ -387,7 +387,7 @@
     <div class="container">
         <div class="row text-center">
             <div class="col-6  mx-auto">
-              <iframe src="http://natsulus.github.io/Discord-iFrame-Widget/index.html?title=D.Tube's Discord&serverID=347020217966395393&theme=dark&invite=true" scrolling="no" height="300px" width="100%" frameborder="0"></iframe>
+              <iframe src="https://skzap.github.io/Discord-iFrame-Widget/index.html?title=D.Tube's Discord&serverID=347020217966395393&theme=dark&invite=true" scrolling="no" height="300px" width="100%" frameborder="0"></iframe>
             </div>
             <div class="col-6 mt-4 mt-sm-0 mx-auto">
                 <div id="steemit-widgets-ticker"></div>
