update DTube Colors

--- a/mediakit.html
+++ b/mediakit.html
@@ -95,24 +95,16 @@
         <h3 class="text-center mt-5 mb-5" style="color:white;">D.Tube colors</h3>
         <div class="row text-center">
           <div class="col-md-3 col-sm-6 color-container red">
-            <h6 style="text-align: center;">Red</h6>
-            <div style="text-align: center;">#ff0000</div>
-            <div style="text-align: center;">0.0 1.0 1.0 0.0</div>
+            <h6 style="text-align: center;">Uni Red</h6>
+            <div style="text-align: center;">#F01A30</div>
           </div>
           <div class="col-md-3 col-sm-6 color-container white">
-            <h6 style="text-align: center;">White</h6>
-            <div style="text-align: center;">#ffffff</div>
-            <div style="text-align: center;">0.0 0.0 0.0 0.0</div>
+            <h6 style="text-align: center;">Navy Blue</h6>
+            <div style="text-align: center;">#223154</div>
           </div>
           <div class="col-md-3 col-sm-6 color-container almostblack">
-            <h6 style="text-align: center;">Almost Black</h6>
-            <div style="text-align: center;">#212121</div>
-            <div style="text-align: center;">0.0 0.0 0.0 0.8510</div>
-          </div>
-          <div class="col-md-3 col-sm-6 color-container almostwhite">
             <h6 style="text-align: center;">Almost White</h6>
-            <div style="text-align: center;">#fafafa</div>
-            <div style="text-align: center;">0.0 0.0 0.0 0.0196</div>
+            <div style="text-align: center;">#E6E6E6</div>
           </div>
         </div>
       </div>
