--- a/mediakit.html
+++ b/mediakit.html
@@ -94,15 +94,15 @@
         <hr>
         <h3 class="text-center mt-5 mb-5" style="color:white;">D.Tube colors</h3>
         <div class="row text-center">
-          <div class="col-md-3 col-sm-6 color-container red">
+          <div class="col-md-4 col-sm-6 color-container unired">
             <h6 style="text-align: center;">Uni Red</h6>
             <div style="text-align: center;">#F01A30</div>
           </div>
-          <div class="col-md-3 col-sm-6 color-container white">
+          <div class="col-md-4 col-sm-6 color-container navyblue">
             <h6 style="text-align: center;">Navy Blue</h6>
             <div style="text-align: center;">#223154</div>
           </div>
-          <div class="col-md-3 col-sm-6 color-container almostblack">
+          <div class="col-md-4 col-sm-6 color-container almostwhite">
             <h6 style="text-align: center;">Almost White</h6>
             <div style="text-align: center;">#E6E6E6</div>
           </div>
